[package]
name = "rust-overview"
version = "0.1.0"
authors = ["LimaEchoCharlie <LimaEchoCharlie@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
serde_cbor = "0.10"
reqwest = { version = "0.10.1", features = ["blocking","json"] }
coap = "0.8"
